--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html> <html lang=en> <head> <meta charset=UTF-8 /> <meta name=viewport content="width=device-width,initial-scale=1"/> <meta http-equiv=X-UA-Compatible content="ie=edge"/> <title>Crypto Converter API</title> <link href="styles/main.css" rel="stylesheet"></head> <body> <script id=currencies-template type=text/x-handlebars-template> <main class="">
+<!doctype html> <html lang=en> <head> <meta charset=UTF-8 /> <meta name=viewport content="width=device-width,initial-scale=1"/> <meta http-equiv=X-UA-Compatible content="ie=edge"/> <title>Browser-fetch-02-crypto-currency-converter</title> <link href="styles/main.css" rel="stylesheet"></head> <body> <script id=currencies-template type=text/x-handlebars-template> <main class="">
 
                    <form>
              <h1 class="mb-3">Crypto-Rate</h1>
@@ -10,6 +10,10 @@
                   <option>LTC</option>
                   <option>DOGE</option>
                   <option>ETH</option>
+                  <option>LUNA</option>
+                  <option>PING</option>
+                  <option>BEEP</option>
+                  <option>ATOM</option>
                 </select>
 
               </div>
@@ -20,6 +24,7 @@
                   <option>USD</option>
                   <option>EUR</option>
                   <option>TRY</option>
+                  <option>LEU</option>
                 </select>
 
               </div>
