--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
                   <option>LTC</option>
                   <option>DOGE</option>
                   <option>ETH</option>
-                  <option>LUNA</option>
-                  <option>PING</option>
-                  <option>BEEP</option>
-                  <option>ATOM</option>
+         
                 </select>
 
               </div>
@@ -21,10 +18,16 @@
               <div class="form-group form-inline my-2">
               <label for="currency" class="border rounded-left mt-0 title">Currency</label>
                 <select class="form-control rounded-right" id="currency">
-                  <option>USD</option>
+                  <option>US Dollar(USD)</option>
                   <option>EUR</option>
+                        <option>RUR</option>
+                        
                   <option>TRY</option>
                   <option>LEU</option>
+                  <option>LUNA</option>
+                  <option>PING</option>
+                  <option>BEEP</option>
+                  <option>ATOM</option>
                 </select>
 
               </div>
