--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
                   <option>LTC</option>
                   <option>DOGE</option>
                   <option>ETH</option>
-                  <option>LUNA</option>
-                  <option>PING</option>
-                  <option>BEEP</option>
-                  <option>ATOM</option>
+   
                 </select>
 
               </div>
@@ -23,7 +20,9 @@
                 <select class="form-control rounded-right" id="currency">
                   <option>USD</option>
                   <option>EUR</option>
-                  <option>TRY</option>
+                  <option>GBP</option>
+                  <option>CAD</option>
+                  <option>AUD</option>
                   <option>LEU</option>
                 </select>
 
