--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
                 <select class="form-control rounded-right " id="crypto-currency">
                   <option>BTC</option>
                   <option>LTC</option>
-                  <option>DOGE</option>
+                  <option>CANN</option>
                   <option>ETH</option>
    
                 </select>
