--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
                 <label for="crypto-currency" class="border rounded-left mt-0 title">Crypto-Currency</label>
                 <select class="form-control rounded-right " id="crypto-currency">
                   <option>BTC</option>
-                  <option>CANN</option>
+                  <option>GBP</option>
                   <option>LTC</option>
-                  <option>CANN</option>
+                  <option>USD</option>
                   <option>ETH</option>
    
                 </select>
